--- a/kursovay/styles/main.css
+++ b/kursovay/styles/main.css
@@ -1,43 +1,32 @@
 
-
+html{
+  background:  linear-gradient(#123,#0b1622 )
+}
 body {
     margin: 0;
-    background: linear-gradient(#123,#0b1622 );
+    background-color: #123;
   }
   
   
-  header {
+header {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #123;
     color: white;
-    min-height: 50vh;
+    min-height: 100px;
     padding: 0px;
+    position: sticky;top: 0px;
   }
   
   
-  .main-heading {
-    max-width: 800px;
-    text-align: center;
-    margin: auto;
-  }
-  
-  
-  .main-heading h1 {
-    font-size: 50px;
-  }
-  
-  
-  .main-heading p {
-    font-size: 18px;
-    line-height: 26px;
-  }
+
   
   
   .header {
     overflow: hidden;
     background-color: #0b1622;
     padding: 10px 20px;
+
   }
   
   
@@ -82,6 +71,7 @@ body {
     float: right;
     display: flex;
     align-items: center;
+    margin-right: 20px;
   }
 
   .novod:hover{
@@ -117,8 +107,26 @@ body {
     background: #d8d9da;
 }
 
-
-
+.main-heading {
+    max-width: 800px;
+    text-align: center;
+    margin: auto;
+    color: white;
+  }
+  
+  
+.main-heading h1 {
+    font-size: 50px;
+  }
+  
+  
+.main-heading p {
+    font-size: 18px;
+    line-height: 26px;
+  }
+main{
+  margin-bottom: 5%;
+}
 
 /* Add padding to containers */
 .container {
@@ -190,13 +198,17 @@ body {
 
 }
 .otverh{
-  margin-top: 12%;
+
+  background-color: #0b1622;
+
+}
+.container_signin{
+  margin-bottom: 5%;
 }
 
 
-
 .footer{
-  background:#123;
+  background:#0b1622;
   padding:30px 200px;
   font-family: 'Play', sans-serif;
   text-align:center;
@@ -249,45 +261,112 @@ body {
   }
   }
 
-  .slider button {
-    padding: 10px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    appearance: button;
-    background-color: #4D4AE8;
-    background-image: linear-gradient(180deg, rgba(188, 188, 188, .15), rgba(188, 188, 188, 0));
-    border: 1px solid #4D4AE8;
-    border-radius: 1rem;
-    box-shadow: rgba(188, 188, 188, 0.15) 0 1px 0 inset,rgba(46, 54, 80, 0.075) 0 1px 1px;
-    box-sizing: border-box;
-    color: black;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Inter,sans-serif;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 1.5;
-    margin: 0;
-    padding: .5rem 1rem;
-    text-align: center;
-    text-transform: none;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    vertical-align: middle;
 
-  }
-  
-  .slider button:hover {
-    background-color: #eee;
-  }
-  
-  .slider button:active {
-    background-color: #ddd;
-  }
-  .slider {
+
+  .slider-container {
     position: relative;
-    text-align: center;
-
+    width: 600px;
+    height: 400px;
+    margin: 0 auto;
+    overflow: hidden;
   }
+  
+  .slider {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .slider img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .prev-button,
+  .next-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    font-size: 24px;
+    color: white;
+  }
+  
+  .prev-button {
+    left: 10px;
+  }
+  
+  .next-button {
+    right: 10px;
+  }
+
+
+  
+/* Кнопка выпадающего списка */
+.dropbtn {
+  background-color: #0b1622;
+  color: rgb(188, 188, 188);
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Кнопка выпадающего меню при наведении и фокусировке */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #123;
+}
+
+/* Контейнер <div> - необходим для размещения выпадающего содержимого */
+.dropdown {
+
+  display: inline-block;
+}
+
+/* Выпадающее содержимое (скрыто по умолчанию) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Ссылки внутри выпадающего списка */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Изменение цвета выпадающих ссылок при наведении курсора */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  
+}
+
+/* Показать выпадающее меню (используйте JS, чтобы добавить этот класс .dropdown-content содержимого, когда пользователь нажимает на кнопку выпадающего списка) */
+.show {display:block;}
+
+
+.opis_exam{
+  margin-top: 5%;
+  color: white;
+  text-align: center;
+  font-size: 30;
+  margin-bottom: 10%;
+}
+
+
+.header .sign:after{
+  content:"+";
+  display:inline-block;      
+}
+.header.expand .sign:after{
+  content:"-";
+}
